--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
    <nav class="navbar">
@@ -27,31 +27,30 @@
    <section class="description-container">
             <div>
                 <div>
-                <h2>BATIK</h2>
-                <p>Batik adalah hasil karya bangsa Indonesia yang merupakan perpaduan antara seni dan teknologi oleh leluhur bangsa Indonesia. Batik Indonesia dapat berkembang hingga sampai pada suatu tingkatan yang tak ada bandingannya baik dalam desain/motif maupun prosesnya.</p>
+                    <h2>BATIK</h2>
+                    <p>Batik adalah hasil karya bangsa Indonesia yang merupakan perpaduan antara seni dan teknologi oleh leluhur bangsa Indonesia. Batik Indonesia dapat berkembang hingga sampai pada suatu tingkatan yang tak ada bandingannya baik dalam desain/motif maupun prosesnya.</p>
                 </div>
                 <div class="description-footer">
                     <p>11 Nov 2024</p>
                     <p class="font-weight-bold">Lanjut</p>
                 </div>
             </div>
-            <img src="aset/batik-kawung.avif" alt="batik-kawung">
+            <img src="aset/batik-kawung.png" alt="batik-kawung">
    </section>
    <section class="content-container">
     <div class="card">
-        <img src="aset/atasan batik.jfif" alt="atasan batik">
+        <img src="aset/atasan batik.png" alt="atasan batik">
         <div class="card-body">
             <h3>Atasan Batik</h3>
             <p>Atasan batik pria dan wanita ini terbuat dari bahan katun yang halus dan lembut, sehingga nyaman dipakai. Atasan ini memiliki desain yang simpel dan elegan, cocok sekali untuk dipakai dalam berbagai acara. Tersedia dalam berbagai warna yang menarik lainnya.</p>
         </div>
         <div class="card-footer">
             <p>11 Nov 2024</p>
-          <p class="font-weight-bold">Lanjut</p>
-
+            <p class="font-weight-bold">Lanjut</p>
         </div>
     </div>
     <div class="card">
-        <img src="aset/sarung batik.jfif" alt="sarung batik">
+        <img src="aset/sarungbatik.png" alt="sarung batik">
         <div class="card-body">
             <h3>Sarung Batik</h3>
             <p>Sarung Batik printing/sablon ini didesain modern dan kekinian. Berbahan katun, tidak nerawang karena memiliki ketebalan lebih dengan ukuran ±118 cm x 210 cm (dewasa) sudah dijahit dan siap dipakai, cocok dipakai untuk acara formal maupun sehari-hari.</p>
@@ -62,7 +61,7 @@
         </div>
     </div>
     <div class="card">
-        <img src="aset/tas batik.jfif" alt="tas batik">
+        <img src="aset/tas batik.png" alt="tas batik">
         <div class="card-body">
             <h3>Tas  Batik</h3>
             <p>Tas batik merupakan inovasi dalam pemakaian kain batik. Tas bahu Bahan kain batik perca jahitan rapi ada 1 resleting, bagian dalam tas dilapisi furing/trikot sehingga lebih rapi. Model tas yang elegant dan modern cocok dipakai untuk berbagai acara.</p>
@@ -84,7 +83,7 @@
             <p class="font-weight-bold">Lanjut</p>
         </div>
     </div>
-    <img src="aset/atasan batik.jfif" alt="atasan batik">
+    <img src="aset/atasan batik.png" alt="atasan batik">
     </section>
     <section class="button-container">
        <button class="btn">Selanjutnya</button>
